--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -1,3 +1,6 @@
+/* 引入SIPUMTECH设计系统 */
+@import './design-system.css';
+
 html,
 body {
   width: 100%;
@@ -11,6 +14,8 @@ html {
 
 body {
   font-size: 16px;
+  /* 使用设计系统的字体族 */
+  font-family: var(--sipumtech-font-family);
 }
 
 #app {
